--- a/assets/stylesheets/auth-page.scss
+++ b/assets/stylesheets/auth-page.scss
@@ -17,16 +17,16 @@
 
 .form-password {
   position: relative;
-  width: 250px;
+  width: 100%;
 }
 
 .data-password {
-  width: 58%;
+  width: 100%;
 }
 
 .form-control-password,
 .form-control-email {
-  width: 250px;
+  width: 100%;
 }
 
 .pure {
@@ -41,11 +41,6 @@
   line-height: 1.2;
 }
 
-.btn-primary {
-  min-width: 100px;
-  font-size: $font-size-xs;
-}
-
 .password-recovery-link {
   box-shadow: none;
   text-decoration: none !important;
@@ -55,11 +50,11 @@
   font-size: $font-size-xs;
 }
 
-.color-password {
-  color: #8280a8;
+.color-icon {
+  color: $secondary-color;
 }
 
-.color-icon {
+.color-password {
   color: $default-color;
 }
 
@@ -70,7 +65,7 @@ input:-webkit-autofill {
 
 .form-control {
   display: inline-block;
-  width: 250px;
+  width: 100%;
   padding: 0;
   border: none;
   border-radius: 0;
