--- a/assets/stylesheets/button.scss
+++ b/assets/stylesheets/button.scss
@@ -1,20 +1,7 @@
 //green
 .btn-green {
   background-color: $default-color;
-  box-shadow: none !important;
   color: white;
-  font-size: $font-size-md;
-  font-weight: $font-weight-light;
-  height: 42px;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
 
   &:hover {
     background-color: $secondary-color;
@@ -24,20 +11,8 @@
 //red
 .btn-red {
   background-color: $danger-color !important;
-  box-shadow: none !important;
   color: white;
-  font-size: $font-size-md;
-  font-weight: $font-weight-light;
-  height: 42px;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
+
 
   &:hover {
     background-color: $secondary-color !important;
@@ -47,12 +22,21 @@
 //bordered
 .btn-bordered {
   background-color: white !important;
-  box-shadow: none !important;
   border: 2px $default-color solid;
   color: $default-color !important;
+
+  &:hover {
+    background-color: $secondary-color !important;
+    color: white !important;
+    border: 2px $secondary-color solid !important;
+  }
+}
+
+.btn {
+  height: 42px;
   font-size: $font-size-md;
   font-weight: $font-weight-light;
-  height: 42px;
+  box-shadow: none !important;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -62,11 +46,5 @@
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-
-  &:hover {
-    background-color: $secondary-color !important;
-    color: white !important;
-    border: 2px $secondary-color solid !important;
-  }
 }
 
