--- a/assets/stylesheets/button.scss
+++ b/assets/stylesheets/button.scss
@@ -5,6 +5,7 @@
 
   &:hover {
     background-color: $secondary-color;
+    color: white;
   }
 }
 
@@ -16,6 +17,7 @@
 
   &:hover {
     background-color: $secondary-color !important;
+    color: white;
   }
 }
 
@@ -46,5 +48,10 @@
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+
+  &:hover {
+    background-color: $secondary-color;
+    color: white;
+  }
 }
 
