--- a/assets/stylesheets/default.scss
+++ b/assets/stylesheets/default.scss
@@ -14,6 +14,6 @@ $font-weight-bold: 600;
 $font-weight-boldest: 800;
 
 //Colors
-$default-color: #00908c;
+$success-color: #00908c;
 $secondary-color: #33333c;
 $danger-color: #ff2c61;
