--- a/assets/stylesheets/multiselect.scss
+++ b/assets/stylesheets/multiselect.scss
@@ -34,7 +34,7 @@
 .multiselect__input,
 .multiselect__single {
   font-size: 14px;
-  color: $default-color;
+  color: $success-color;
   font-weight: $font-weight-boldest;
 }
 
