--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -4,3 +4,20 @@
 @import 'media';
 @import 'date-picker';
 @import 'file-agent';
+
+
+.notificationCenter.topRight {
+  top: 5rem !important;
+  right: 0;
+  bottom: auto;
+  left: auto;
+  z-index: 999 !important;
+}
+
+ .notificationCenter .vn-notification .vn-container {
+   z-index: 999 !important;
+ }
+
+.notificationCenter {
+  z-index: 999 !important;
+}
