fixes and features

--- a/assets/stylesheets/default.scss
+++ b/assets/stylesheets/default.scss
@@ -6,7 +6,6 @@ $font-size-lg: 1 rem;
 $font-size-xl: 1.25rem;
 $font-size-xxl: 1.5rem;
 
-
 //font-weights
 $font-weight-light: 400;
 $font-weight-normal: 500;
@@ -16,4 +15,5 @@ $font-weight-boldest: 800;
 //Colors
 $success-color: #00908c;
 $secondary-color: #33333c;
+$warning-color: #f8bc07;
 $danger-color: #ff2c61;
