--- a/assets/stylesheets/file-agent.scss
+++ b/assets/stylesheets/file-agent.scss
@@ -12,7 +12,7 @@
 }
 
 .theme-list .vue-file-agent .file-preview-wrapper .file-preview .file-delete {
-  color: $danger-color !important;
+  color: $secondary-color !important;
 }
 
 .vue-file-agent .file-preview .file-size .vue-file-agent .file-ext, .vue-file-agent .file-preview {
